@@ -173,6 +173,20 @@ platforms include:
 <b>Note:</b> Selecting the option "All" does not select bugs assigned against all platforms.  It
 merely selects bugs that <b>occur</b> on all platforms.
 
+<a name="op_sys"><h2>Operating System</h2></a>
+This is the operating system against which the bug was reported.  Legal
+operating systems include:
+
+<UL>
+<LI> All (happens on all operating systems; cross-platform bug)
+<LI> Windows 95
+<LI> Mac System 8.0
+<LI> Linux
+</UL>
+
+Note that the operating system implies the platform, but not always.
+For example, Linux can run on PC and Macintosh and others.
+
 <a name="assigned_to"><h2>Assigned To</h2></a>
 
 This is the person in charge of resolving the bug.  Every time this
@@ -190,6 +204,6 @@ status field appropriately.
 <hr>
 <address><a href="http://home.netscape.com/people/terry/">Terry Weissman &lt;terry@netscape.com&gt;</a></address>
 <!-- hhmts start -->
-Last modified: Wed Dec  2 14:08:58 1998
+Last modified: Fri Jan 15 13:36:36 1999
 <!-- hhmts end -->
 </body> </html>
